fixed z-index

--- a/style.css
+++ b/style.css
@@ -124,7 +124,7 @@ body.dark-mode {
     background-color: #ddd;
     padding: 10px;
     border-radius: 10px;
-    z-index: 2;
+    z-index: 1;
 }
 
 .cell {
@@ -294,7 +294,7 @@ body.dark-mode .cell.O {
 .confirm-dialog {
     display: none;
     position: fixed;
-    z-index: 5;
+    z-index: 2;
     left: 0;
     top: 0;
     width: 100%;
@@ -398,7 +398,7 @@ body.dark-mode .confirm-dialog button:hover {
         background: rgba(0, 0, 0, 0.8);
         color: white;
         box-shadow: 0 -4px 8px rgba(0, 0, 0, 0.2);
-        z-index: 9;
+        z-index: 2;
     }
     #settingsToggle {
         display: block;
@@ -411,7 +411,7 @@ body.dark-mode .confirm-dialog button:hover {
         cursor: pointer;
         padding: 10px;
         border-radius: 50%;
-        z-index: 10;
+        z-index: 1;
     }
 }
 
